--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,7 @@
     </head>
     <body>
        <h1>Welcome to my WEb SiTe .. </h1>
-        <h2> Hello, World ! </h2>
+        <h2 style="color:blue;"> Hello, World ! </h2>
         <h3>What's been happenin</h3>
     </body>
 </html>
